# YogaCenterApp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: database.db
database/: db.py
models/: view_models.py
services/: report_service.py  services.py
ui/: attendance_widget.py  center_management.py  class_management.py  class_reservation_dialog.py  dashboard.py  login_dialog.py  main_window.py  payment_dialog.py  payments_widget.py  receptionist_payment_dialog.py  reports_widget.py  user_management.py
