[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "YogaCenterApp"
version = "1.0"
dependencies = [
  "annotated-types==0.7.0",
  "bcrypt==5.0.0",
  "greenlet==3.3.0",
  "pydantic==2.12.5",
  "pydantic_core==2.41.5",
  "PyQt6==6.10.2",
  "PyQt6-Qt6==6.10.1",
  "PyQt6_sip==13.10.3",
  "SQLAlchemy==2.0.45",
  "sqlmodel==0.0.31",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
]
requires-python = ">=3.8"
authors = [{ name = "Angel Altuve", email = "angelaltuve@murena.io" }]

description = "Yoga Center App"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
keywords = ["yoga", "center", "app"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[tool.basedpyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__"]

reportMissingImports = "error"
reportMissingTypeStubs = false
reportAny = "none"
typeCheckingMode = "basic"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportOptionalMemberAccess = "none"
reportGeneralTypeIssues = "warning"


pythonVersion = "3.13.11"
pythonPlatform = "Linux"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
